# implementing-transformer-models

./: .gitignore  Practical_1.ipynb  README.md  bench_cpu_gpu.py  bench_single.py  eval.py  evaluation_results.txt  main.py  plot_benchmarks.py  pyproject.toml  train.py
benchmarks/: results_cpu_gpu.csv
bpe_tok_gpt2/: merges.txt  special_tokens_map.json  tokenizer_config.json  vocab.json
data/: data_cleaning.py  dataset_translation.py
model/: attention.py  embeddings.py  functional.py  lr_scheduler.py  model.py  optimiser.py  positional_encoding.py
modelling/: attention.py  attention_test.py  bpe_tokenizer.py  data_cleaning.py  dataset_translation.py  export_gpt2_tokenizer.py  functional.py
practical/: Practical_1.ipynb  Practical_11.ipynb  Practical_2.ipynb  Practical_3.ipynb  Practical_5.ipynb  Practical_9.ipynb
scripts/: install_torch.py
test/: bpe_test.py  practical_2_test.py  practical_4_test.py  practical_5_encoder_layer_tests.py  practical_5_mha_tests.py  practical_6.py  test_attention_forward.py
tokenizer/: bpe_tokenizer.py  export_gpt2_tokenizer.py
transformer/: pyproject.toml
transformer/src/transformer/: attention.py  embeddings.py
transformer/tests/: test_smoke.py
